# ai-medical-chatbot

./: .gitignore  README.md  creating_vector_database.py  frontend_bot.py  pyproject.toml  query_retrieval.py  requirements.txt  test.ipynb
