[project]
name = "maariful-quran-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-huggingface>=0.3.1",
    "pypdf>=6.1.1",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
